// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/EditText should render default val when can edit 1`] = `
<div>
  <div
    class="ant-typography css-1am9q1l css-dev-only-do-not-override-txh9fw"
  >
    default edit text
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
      tabindex="0"
    >
      <svg
        class="custom-icon"
        color="currentColor"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`lib/EditText should render default when not have val 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
    type="button"
  >
    <span>
      编 辑
    </span>
  </button>
</div>
`;

exports[`lib/EditText should render edit  value input when textarea onEnd 1`] = `
<div>
  <div
    class="ant-typography css-1am9q1l css-dev-only-do-not-override-txh9fw"
  >
    value-end
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
      tabindex="0"
    >
      <svg
        class="custom-icon"
        color="currentColor"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`lib/EditText should render edit  value input when textarea onEnd 2`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      value-end
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit  value input when textarea onEnd 3`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      value-end
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit input when textarea change 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only has-icon-primary basic-button-wrapper css-geipcv"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <svg
        class="custom-icon"
        color="currentColor"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`lib/EditText should render edit input when textarea change 2`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    />
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit input when textarea change 3`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      change_val
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit input when textarea change 4`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only has-icon-primary basic-button-wrapper css-geipcv"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <svg
        class="custom-icon"
        color="currentColor"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`lib/EditText should render edit input when textarea onEnd 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only has-icon-primary basic-button-wrapper css-geipcv"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <svg
        class="custom-icon"
        color="currentColor"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`lib/EditText should render edit input when textarea onEnd 2`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    />
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit input when textarea onEnd 3`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      textareaEle
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit value input when textarea change 1`] = `
<div>
  <div
    class="ant-typography css-1am9q1l css-dev-only-do-not-override-txh9fw"
  >
    value-change
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
      tabindex="0"
    >
      <svg
        class="custom-icon"
        color="currentColor"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`lib/EditText should render edit value input when textarea change 2`] = `
<div>
  <div
    class="ant-typography ant-typography-edit-content css-1am9q1l ant-typography-div css-dev-only-do-not-override-txh9fw"
  >
    <textarea
      class="ant-input css-dev-only-do-not-override-txh9fw"
      rows="1"
      style="resize: none; height: 2px;"
    >
      value-change
    </textarea>
    <span
      aria-label="enter"
      class="anticon anticon-enter ant-typography-edit-content-confirm"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="enter"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`lib/EditText should render edit value input when textarea change 3`] = `
<div>
  <div
    class="ant-typography css-1am9q1l css-dev-only-do-not-override-txh9fw"
  >
    value-change
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
      tabindex="0"
    >
      <svg
        class="custom-icon"
        color="currentColor"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;
